--- a/02_Code_02_Final.ipynb
+++ b/02_Code_02_Final.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "## 3. Analysis\n",
     "\n",
-    "- We added augmentation to compensate the removal of params but need to train the remaining neurons harder"
+    "- We added augmentation to compensate the removal of params but need to train the remaining neurons"
    ]
   },
   {
